# kafka_nameID

./: .gitignore  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
src/: consumer.py  producer.py  transcript_UI.py
