[tool.poetry]
name = "kafka-nameid"
version = "0.1.0"
description = ""
authors = ["Delphine Tai-Beauchamp <delphinetaibeauchamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
pydantic = "^2.8.2"
kafka-python = "^2.0.2"
kafka = "^1.3.5"
youtube-transcript-api = "^0.6.2"
openai = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
